# bite

./: Cargo.toml  README.md
src/: lib.rs  main.rs  traits.rs
src/embedder/: mod.rs  models.rs  openai.rs
src/index/: knn.rs  mod.rs  models.rs
