[package]
name = "bite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38", features = ["full"] }
tokio-macros = { version = "0.2.0-alpha.6" }
uuid = { version = "1.3.1", features = [ "v4", "fast-rng", "macro-diagnostics" ] }